updqte